# docs/swagger.json
@@ -634,7 +634,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Publication"
+                                "$ref": "#/definitions/models.GetPublications"
                             }
                         }
                     },
@@ -851,7 +851,7 @@
             }
         },
         "/publications/{publicationID}/finalize": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -931,7 +931,7 @@
             }
         },
         "/publications/{publicationID}/form": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -1330,6 +1330,56 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.GetPublications": {
+            "type": "object",
+            "required": [
+                "creation_date",
+                "description",
+                "id",
+                "status",
+                "title",
+                "user_id"
+            ],
+            "properties": {
+                "completion_date": {
+                    "type": "string"
+                },
+                "creation_date": {
+                    "type": "string"
+                },
+                "description": {
+                    "description": "Краткое описание события",
+                    "type": "string"
+                },
+                "formation_date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "moderator_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "Установлен статус по умолчанию",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.PublicationStatus"
+                        }
+                    ]
+                },
+                "title": {
+                    "description": "Название публикации (исторического события)",
+                    "type": "string"
+                },
+                "trust_score": {
+                    "type": "number"
+                },
+                "user_id": {
+                    "type": "integer"
                 },
                 "user_name": {
                     "type": "string"
@@ -1470,9 +1520,6 @@
                 },
                 "user_id": {
                     "type": "integer"
-                },
-                "user_name": {
-                    "type": "string"
                 }
             }
         },
